Fix flickering photos, closes #38. Add Github Icon, closes #37. Add tooltips in navbar, closes #36.

--- a/src/index.scss
+++ b/src/index.scss
@@ -47,28 +47,3 @@ body {
   overflow-y: scroll;
   overflow-x: hidden;
 }
-
-.tooltip {
-  position: absolute;
-  padding: 5px;
-  border-radius: 6px;
-  color: var(--white);
-  background-color: rgba(0,0,0, .8);
-  text-align: center;
- 
-  pointer-events: none;
-  transform: translate(-50%, 0);
-  z-index: 1;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  line-height: 1.5;
-  justify-content: center;
-}
-
-.tooltip-details {
-  line-height: 1.7;
-  text-align: left;
-  align-self: flex-start;
-}
